Adding meta and correct response types into upgrade-risks-prediction endpoint
